--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "redux": "^4.2.1",
     "store-badge": "^1.3.0",
     "styled-components": "^5.3.8",
+    "survey-core": "^1.9.77",
+    "survey-react-ui": "^1.9.77",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
